--- a/build.gradle
+++ b/build.gradle
@@ -15,22 +15,33 @@ buildscript {
 plugins {
     id 'java'
     id 'eclipse'
-    id 'org.springframework.boot' version '2.5.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE' // 스프링 부트의 의존성들을 관리해줌
+    id 'org.springframework.boot' version '2.7.1'
+    id 'io.spring.dependency-management' version '1.0.12.RELEASE' // 스프링 부트의 의존성들을 관리해줌
 }
 
-group = 'org.example'
+group = 'com.jojoldu.book'
 version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
+// for JUnit 5
+test{
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation ('org.springframework.boot:spring-boot-starter-web')
     testImplementation ('org.springframework.boot:spring-boot-starter-test')
-    // testImplementation platform('org.junit:junit-bom:5.9.1')
-    // testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('com.h2database:h2')
+    testImplementation("org.junit.vintage:junit-vintage-engine") {
+        exclude group: "org.hamcrest", module: "hamcrest-core"
+    }
 }
 
 test {
